icons within a-btn-link have pos: rel to avoid cropping

--- a/source/css/scss/base/_links.scss
+++ b/source/css/scss/base/_links.scss
@@ -4,7 +4,6 @@
 a,
 .a-btn-link {
   position: relative;
-  min-height: 28px;
   padding-bottom: 2px;
   color: $black;
   text-decoration: none;
@@ -71,6 +70,10 @@ a,
 
   .a-h3 & {
     padding-bottom: 2px;
+  }
+
+  &>i {
+    position: relative;
   }
 }
 
